Fixed deprecations and compiler warnings
plus minor language level updates like Stream#toList and Paths
utility replacement.